--- a/exercises/gapminder_analysis.Rmd
+++ b/exercises/gapminder_analysis.Rmd
@@ -36,14 +36,14 @@ glimpse(gap)
 How many variables and observations are in `gap`? What are the variable types
 for the variables in `gap`?
 
-Variable | Type
----------|----------
-Var 1    |
-Var 2    |
-Var 3    |
-Var 4    |
-Var 5    |
-Var 6    |
+Variable    | Type
+------------|----------
+`country`   | character
+`continent` | character
+`year`      | double
+`lifeExp`   | double
+`pop`       | double
+`gdpPercap` | double
 
 ### Exercise 2
 
