Finished function exercises

--- a/exercises/python_programming_tasks.ipynb
+++ b/exercises/python_programming_tasks.ipynb
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,8 +647,11 @@
     "  is_prime(16)\n",
     "  \n",
     "  \"\"\"\n",
+    "  # Added in this portion to ensure that zero (and negative numbers) don't get counted as prime\n",
+    "  if n <= 0:\n",
+    "    result = False\n",
     "  \n",
-    "  if n < 3:\n",
+    "  elif n < 3:\n",
     "    result = n - 1\n",
     "  else:\n",
     "    for i in range(2, n):\n",
@@ -663,10 +666,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define function\n",
+    "def return_lower_primes(n):\n",
+    "    \"\"\" Print list of prime numbers less than or equal to input. Also returns number of prime numbers \n",
+    "    in that list\"\"\"\n",
+    "    \n",
+    "    \n",
+    "    # Keep track of list of prime numbers and count lower than or equal to specified input\n",
+    "    primes_list = []\n",
+    "    prime_count = 0\n",
+    "    \n",
+    "    # Cycle through all numbers less than or equal to input\n",
+    "    for nums in range(n + 1):\n",
+    "        if is_prime(nums):\n",
+    "            prime_count += 1\n",
+    "            primes_list.append(nums)\n",
+    "            \n",
+    "    # Print list of prime numbers\n",
+    "    print(primes_list)\n",
+    "    \n",
+    "    # Return count of prime numbers\n",
+    "    return(prime_count)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11]\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test function\n",
+    "print(return_lower_primes(11))"
+   ]
   },
   {
    "cell_type": "markdown",
