--- a/exercises/python_scratch.ipynb
+++ b/exercises/python_scratch.ipynb
@@ -238,6 +238,13 @@
     "# Test help function for a method\n",
     "help(x.pop)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding an additional markdown cell to test new aliases for Github. Use ci for commit and pu for push origin master."
+   ]
   }
  ],
  "metadata": {
