--- a/exercises/gapminder_analysis.Rmd
+++ b/exercises/gapminder_analysis.Rmd
@@ -7,8 +7,10 @@ output: html_document
 
 ```{r include=FALSE}
 # global chunk options
-knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE,
-                      comment = "#>", highlight = TRUE, fig.align = "center")
+knitr::opts_chunk$set(
+  echo = TRUE, message = FALSE, warning = FALSE,
+  comment = "#>", highlight = TRUE, fig.align = "center"
+)
 ```
 
 ## Load packages
@@ -52,7 +54,7 @@ Variable    | Type
 Create a scatter plot of life expectancy versus year for the United States.
 
 ```{r ex2_part1, eval=FALSE }
-gap_usa <- gap %>% 
+gap_usa <- gap %>%
   filter(country == "United States")
 
 ggplot(data = gap_usa, mapping = aes(x = year, y = lifeExp)) +
@@ -65,9 +67,11 @@ Create a plot of life expectancy verses GDP per capita for Canada. Set the
 color of the points to be red and connect them with a solid black line.
 
 ```{r ex2_part2}
-gap_canada = gap %>% filter(country == "Canada")
+gap_canada <- gap %>% filter(country == "Canada")
 
-ggplot(data = gap_canada, mapping = aes(x = gdpPercap, y = lifeExp)) + geom_point(color = "red") + geom_line()
+ggplot(data = gap_canada, mapping = aes(x = gdpPercap, y = lifeExp)) +
+  geom_point(color = "red") +
+  geom_line()
 ```
 
 **Part 3**
@@ -76,10 +80,10 @@ Create a scatter plot of life expectancy versus GDP per capita based on all
 countries in Africa in 1992. Set the color to be purple.
 
 ```{r ex2_part3}
-gap_africa_1992 = gap %>% filter(continent == "Africa", year == 1992)
+gap_africa_1992 <- gap %>% filter(continent == "Africa", year == 1992)
 
-ggplot(data = gap_africa_1992, mapping = aes(x = gdpPercap, y = lifeExp)) + 
-   geom_point(color = "purple")
+ggplot(data = gap_africa_1992, mapping = aes(x = gdpPercap, y = lifeExp)) +
+  geom_point(color = "purple")
 ```
 
 ### Exercise 3
@@ -102,11 +106,14 @@ two continents.
    be set for each level of the variable `continent`.
 
 ```{r ex3_part1}
-gap_africa_europe = gap %>% filter(continent %in% c("Africa", "Europe"), year 
-   == 1992)
+gap_africa_europe <- gap %>% filter(continent %in% c("Africa", "Europe"), year
+== 1992)
 
-ggplot(data = gap_africa_europe, mapping = aes(x = gdpPercap, y = lifeExp, 
-   color = continent)) + geom_point()
+ggplot(data = gap_africa_europe, mapping = aes(
+  x = gdpPercap, y = lifeExp,
+  color = continent
+)) +
+  geom_point()
 ```
 
 **Part 2**
@@ -123,11 +130,8 @@ Fill the boxplots with color `darkgreen`.
 3. Use `geom_boxplot()` and set the fill to `darkgreen`.
 
 ```{r ex3_part2}
-gap_2007 = gap %>% filter(year == 2007)
+gap_2007 <- gap %>% filter(year == 2007)
 
-ggplot(data = gap_2007, aes(x = continent, y = gdpPercap)) + 
-   geom_boxplot(fill = "darkgreen")
-
+ggplot(data = gap_2007, aes(x = continent, y = gdpPercap)) +
+  geom_boxplot(fill = "darkgreen")
 ```
-
-
